# aioairctrl

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
aioairctrl/: __init__.py  cli.py
aioairctrl/coap/: __init__.py  aiocoap_monkeypatch.py  client.py  encryption.py
examples/: example.py
tests/: test_cli.py  test_encryption.py
